# zkt-access-gateway

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: bridge_manager.py  database.py  main.py  mqtt_manager.py
backend/wine_script/: zk_client.py
data/: gateway.db
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js  style.css
